# warg

./: .clang-format  .directory  .gitignore  .style.yapf  CMakeCache.txt  CMakeLists.txt  Functions.cpp  Functions.h  Globals.cpp  Globals.h  Makefile  Mesh_Loader.cpp  Mesh_Loader.h  Render.cpp  Render.h  Render_Test_State.cpp  Render_Test_State.h  Scene_Graph.cpp  Scene_Graph.h  Shader.cpp  Shader.h  State.cpp  State.h  Timer.cpp  Timer.h  Warg_State.cpp  Warg_State.h  _clang-format  _clang-format-ignore  chat.cpp  chat.h  cmd.cpp  cmd.h  data.s  main.cpp  meme.frag  meme.vert  moov.h  moov.py  moovd.c  (+17 more)
Assets/Models/Chest/: Chest.3ds  Chest1.FBX  untitled.3ds  untitled.fbx  untitled1.fbx
Assets/Models/Illidan/: illidan stormrage.fbx  illidan stormrage.iAvatar  infoz.txt
Assets/Models/Illidan/illidan stormrage.fbm/: FbxTemp_0001.tga  FbxTemp_0003.tga
Assets/Shaders/: TemporalAA.frag  fragment_shader.frag  instance.vert  passthrough.frag  passthrough.vert  vertex_shader.vert  world_origin_distance.frag
cmake/Modules/: FindSDL2_image.cmake  findSDL2.cmake
imgui/: imgui_impl_sdl_gl3.cpp
